--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Samuel Florez",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^5.0.0"
+    "gulp": "^5.0.0",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.77.8"
   }
 }
