--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "author": "Samuel Florez",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "gulp": "^5.0.0",
+    "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
+    "postcss": "^8.4.39",
     "sass": "^1.77.8"
-  }
+  },
+  "browerslist": [
+    "last 1 version",
+    "> 1%"
+  ]
 }
