--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "postcss": "^8.4.39",
     "sass": "^1.77.8"
